update img link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h2>
 <a id="上个效果图" class="anchor" href="#%E4%B8%8A%E4%B8%AA%E6%95%88%E6%9E%9C%E5%9B%BE" aria-hidden="true"><span class="octicon octicon-link"></span></a>上个效果图</h2>
 
-<p><img src="./sample.gif" alt="sample"></p>
+<p><img src="/assets/images/sample.gif" alt="sample"></p>
 
 <h2>
 <a id="require" class="anchor" href="#require" aria-hidden="true"><span class="octicon octicon-link"></span></a>Require</h2>
@@ -44,11 +44,11 @@
 
 <p>鼠标移至左上角会显示配置按钮：</p>
 
-<p><img src="./settingButton.png" alt="settingButton"></p>
+<p><img src="/assets/images/settingButton.png" alt="settingButton"></p>
 
 <p>设置界面如下图：</p>
 
-<p><img src="./settingForm.png" alt="settingForm"></p>
+<p><img src="/assets/images/settingForm.png" alt="settingForm"></p>
 
 <p>可以设置多个抽奖方案，每个方案可以设置独立的转盘和奖品；</p>
 
